2008-06-17  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs: 
	  Auto-add necessary references.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml: Bump MD version.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs,
	  MonoDevelop.WebReferences/WebReferenceItem.cs,
	  MonoDevelop.WebReferences/Library.cs,
	  MonoDevelop.WebReferences/WebReferenceItemCollection.cs,
	  MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs,
	  gtk-gui/MonoDevelop.WebReferences.Dialogs.WebReferenceDialog.cs:
	  New project model changes.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs,
	  MonoDevelop.WebReferences.Dialogs/WebReferenceDialog.cs: Worked on gnome
	  hig compliant alerts.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs:
	  Refactored status bar.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml: Updated add-in category and
	  description.

2008-01-02  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.WebReferences.Dialogs/WebReferenceDialog.cs:
	The using System.Net;\rusing System.Text;\n pattern was causing a
	CS8025 on SVN trunk.  Replace the \r with a \n.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences/Library.cs,
	  MonoDevelop.WebReferences.Dialogs/WebReferenceDialog.cs,
	  gtk-gui/MonoDevelop.WebReferences.Dialogs.WebReferenceDialog.cs,
	  gtk-gui/gui.stetic: Make it work when a browser is not installed.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.mdp: Updated project files. The order of